# WallpaperScraper

./: .gitignore  CHANGELOG.md  DECISIONS.md  ENHANCEMENTS-COMPLETE.md  ENVIRONMENT-SETUP-COMPLETE.md  LEARNINGS.md  LICENSE  LICENSE-PAPER.md  PAPER.md  PRESENTATION.md  README.md  SETUP-PYTHON.md  SITES.md  TESTIMONIAL.md  config.py  debug_site_structure.py  investigate_wallpapers.py  investigate_wallpaperswide.py  main.py  pyproject.toml  requirements-dev.txt  requirements.txt  wallpaper_scout.py  wallpaper_scraper.py
.github/: copilot-instructions.md
.github/instructions/: data-science.instructions.md  documentation.instructions.md  learning.instructions.md  meta-cognition.instructions.md  packaging.instructions.md  python.instructions.md  testing.instructions.md
.github/learnings/: development-session-2025-07-13.md  meditation-session-2025-07-13.md
.github/prompts/: code-review.prompt.md  cognitive-health.prompt.md  consolidation.prompt.md  data-analysis.prompt.md  debugging.prompt.md  environment-setup.prompt.md  meta-learning.prompt.md  package-development.prompt.md  performance-optimization.prompt.md  refactoring.prompt.md  testing.prompt.md  (+1 more)
services/: fourk_wallpapers_service.py  wallhaven_service.py  wallpaperbat_service.py  wallpaperswide_service.py
src/: config.py  debug_site_structure.py  investigate_wallpapers.py  investigate_wallpaperswide.py  utils.py  wallpaper_scout.py  wallpaper_scraper.py
tests/: test_cli.py  test_config.py  test_debug_scripts.py  test_enhanced_cli.py  test_enhanced_config.py  test_fourk_wallpapers_service.py  test_multiple_themes.py  test_readme_structure.py  test_scraper_entry.py  test_services_import.py  test_utils.py  test_wallpaper_scraper.py  test_wallpaperbat_service.py
(+3 files in other folders)
